ISSD-977 remove styles from file list to prevent overlap with dropzone

--- a/workspaces/liferay-marketplace-workspace/client-extensions/liferay-marketplace-custom-element/src/pages/ProvideAppBuildPage/ProvideAppBuildPage.scss
+++ b/workspaces/liferay-marketplace-workspace/client-extensions/liferay-marketplace-custom-element/src/pages/ProvideAppBuildPage/ProvideAppBuildPage.scss
@@ -53,6 +53,11 @@
 	
 		.file-list-container {
 			margin-bottom: 0;
+
+			.document-file-list-item-container {
+				border: none;
+				margin-bottom: 0;
+			}
 		}
 	}
 }
